--- a/style.css
+++ b/style.css
@@ -6,3 +6,28 @@ body {
 img {
    height: 100px;
 }
+
+.different-font {
+   font-family: Courier;
+}
+
+.bigger-bolder {
+   font-size: 36px;
+   font-weight: bold;
+}
+
+.background {
+   background-color: #FFCCCC;
+}
+
+.left {
+   text-align: left;
+}
+
+.right {
+   text-align: right;
+}
+
+.font-color {
+   color: #0000FF;
+}
